--- a/index.html
+++ b/index.html
@@ -14,11 +14,5 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <span class="icon-container">
-      <svg class="icon icon--primary">
-        <use xlink:href="images/sprite.svg#clock"></use>
-      </svg>
-    </span>
-  </body>
+  <body></body>
 </html>
