--- a/index.html
+++ b/index.html
@@ -14,5 +14,16 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div style="width: 30%; padding: 4rem">
+      <div class="card card--secondary">
+        <header class="card__header">Card Title</header>
+        <div class="card__body">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero,
+          possimus nobis unde voluptatum blanditiis reprehenderit aliquam vitae
+          laborum earum optio.
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
