Define Testimonial Component

--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="collapsible">
+      <header>
+        <h2>Item 1</h2>
+      </header>
+    </div>
+  </body>
 </html>
