--- a/index.html
+++ b/index.html
@@ -15,10 +15,32 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="collapsible">
-      <header>
-        <h2>Item 1</h2>
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item 1</h2>
+        <svg class="icon icon--white collapsible__chevron">
+          <use xlink:href="images/sprite.svg#chevron"></use>
+        </svg>
       </header>
+      <div class="collapsible__content">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt
+        reiciendis porro nam maxime rerum est.
+      </div>
     </div>
+
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item 1</h2>
+        <svg class="icon icon--white collapsible__chevron">
+          <use xlink:href="images/sprite.svg#chevron"></use>
+        </svg>
+      </header>
+      <div class="collapsible__content">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt
+        reiciendis porro nam maxime rerum est.
+      </div>
+    </div>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
