--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           tempora vitae neque fugit quae?
         </p>
       </header>
-      <div style="width: 30%; padding: 4rem">
+      <div class="card__main">
         <div class="card card--secondary">
           <header class="card__header">Card Title</header>
           <div class="card__body">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur non eum deserunt quas minima consequatur. Similique culpa dolore neque deleniti!
           </div>
         </div>
       </div>
